[gd_scene load_steps=5 format=3 uid="uid://c2yyfakwg86js"]

[ext_resource type="Script" uid="uid://cllwdn7qrubwu" path="res://script/ui/GlobalSettingsUI.gd" id="1_dknm6"]
[ext_resource type="Theme" uid="uid://xn0cilaavrhp" path="res://asset/ui/theme/MainMenu.tres" id="2_802hr"]
[ext_resource type="FontFile" uid="uid://bh5v7skmp36yr" path="res://asset/fonts/fusion-pixel-12px-proportional-zh_hans.otf" id="2_rvc10"]
[ext_resource type="Texture2D" uid="uid://b7ok05bir02oj" path="res://asset/ui/singles32x32/GUI/003.png" id="3_lg23i"]

[node name="SettingsLayer" type="CanvasLayer"]
layer = 100
script = ExtResource("1_dknm6")

[node name="SettingsUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_802hr")

[node name="ColorRect" type="ColorRect" parent="SettingsUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="NinePatchRect" type="NinePatchRect" parent="SettingsUI"]
layout_mode = 0
offset_left = 328.0
offset_top = 160.0
offset_right = 824.0
offset_bottom = 464.0
size_flags_horizontal = 4
texture = ExtResource("3_lg23i")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 7
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsUI/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rvc10")
theme_override_font_sizes/font_size = 24
text = "设置"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsUI/NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="SettingsUI/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="API设置" type="VBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="APITypeContainer" type="HBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/APITypeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "API类型："

[node name="APITypeOption" type="OptionButton" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/APITypeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModelContainer" type="HBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/ModelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "模型："

[node name="ModelOption" type="OptionButton" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/ModelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="APIKeyContainer" type="HBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/APIKeyContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "API密钥："

[node name="APIKeyInput" type="LineEdit" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/APIKeyContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入API密钥"
secret = true

[node name="AILabelContainer" type="HBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/AILabelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "显示AI模型标签："

[node name="AILabelCheckBox" type="CheckBox" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/API设置/AILabelContainer"]
layout_mode = 2

[node name="游戏" type="VBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/游戏"]
layout_mode = 2
text = "游戏设置"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/游戏"]
layout_mode = 2

[node name="MapButton" type="Button" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/游戏"]
layout_mode = 2
text = "切换地图"

[node name="MainMenuButton" type="Button" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/游戏"]
layout_mode = 2
text = "返回主菜单"

[node name="QuitButton" type="Button" parent="SettingsUI/NinePatchRect/VBoxContainer/TabContainer/游戏"]
layout_mode = 2
text = "退出游戏"

[node name="ButtonContainer" type="HBoxContainer" parent="SettingsUI/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="SettingsUI/NinePatchRect/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[node name="SaveButton" type="Button" parent="SettingsUI/NinePatchRect/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存"
